# ai-digital-clone

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  streamlit_app.py
configs/: default.yaml
data/eval/: queries_v1.json
docs/: PRD.md  iteration-log.md  learning-journal.md
docs/adr/: ADR-001-crewai-flow-pattern.md  ADR-002-rag-config-embeddings-reranking-chunking.md  ADR-003-feature-vectors-vs-llm-embeddings.md  ADR-004-groundedness-scoring-approach.md  ADR-005-shared-rag-dual-leader-mode.md
docs/learning/: concepts-primer.html
docs/plans/: day1-plan.md  day2-plan.md  day3-plan.md  day4-plan.md  day5-plan.md  day6-plan.md
scratch/: flow_poc.py
scripts/: build_profiles.py  diagnostic_6a_chunk_overlap.py  experiment_6a_embeddings.py  test_rag_pipeline.py  timing_dual_leader.py  validate_emails.py
src/: cli.py  config.py  flow.py  schemas.py  visualization.py
src/agents/: evaluator_steps.py  fallback_steps.py  rag_agent.py  style_crew.py
src/eval/: query_loader.py
src/evaluation/: __init__.py  confidence_scorer.py  evaluator.py  groundedness_scorer.py
tests/: test_calendar_mock.py  test_chunker.py  test_citation_extractor.py  test_confidence_scorer.py  test_config.py  test_context_summarizer.py  test_corpus_loader.py  test_email_parser.py  test_embedder.py  test_evaluator.py  test_feature_extractor.py  test_flow.py  test_groundedness_scorer.py  test_indexer.py  test_profile_builder.py  test_query_loader.py  test_reranker.py  test_retriever.py  test_schemas.py  test_style_crew.py  test_style_scorer.py  test_unstyled_responder.py
(+16 files in other folders)
