[project]
name = "torvalds-digital-clone"
version = "0.1.0"
description = "Multi-agent style-matching system: digital clones of Torvalds and Kroah-Hartman"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.108.0",
    "crewai-tools>=0.40.0",
    "pydantic>=2.0",
    "instructor>=1.0.0",
    "litellm>=1.40.0",
    "faiss-cpu>=1.8.0",
    "cohere>=5.0.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "streamlit>=1.35.0",
    "sentence-transformers>=3.0.0",
    "datasets>=2.0.0",
    "langchain-text-splitters>=0.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
